<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/MenuItemViewWebGallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/web_gallery"
        android:showAsAction="ifRoom"
         />
    <item android:id="@+id/MenuItemUploadToWebGallery"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/upload"
        android:showAsAction="ifRoom"
         />
    <item android:id="@+id/MenuItemViewTutorial"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/tutorial"
        android:showAsAction="ifRoom"
         />
    <item android:id="@+id/MenuItemSettings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings"
         />
    <item android:id="@+id/MenuItemAbout"
	    android:icon="@android:drawable/ic_menu_info_details"
	    android:title="@string/about_app"
	     />
</menu>
