<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:id="@+id/TutorialViewPager" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <Button
	        android:id="@+id/CloseButton"
	        style="@style/BorderlessButton"
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/close" />
	    <Button
	        android:id="@+id/BackButton"
	        style="@style/BorderlessButton"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/back" />
	    <Button
	        android:id="@+id/NextButton"
	        style="@style/BorderlessButton"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/next" />
    </LinearLayout>

</LinearLayout>

